# hapax-arrange

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: midi-invariants.md  no-binary-fixtures.md  test-before-commit.md
examples/demo_song/: build_input.py  input.mid
src/hapax_arrange/: __main__.py  cli.py  dedup.py  errors.py  model.py  reader.py  report.py  segmenter.py  slicer.py  timing.py  validator.py  writer.py
tests/: conftest.py  test_cli.py  test_dedup.py  test_demo_song.py  test_reader.py  test_report.py  test_segmenter.py  test_slicer.py  test_validator.py  test_writer.py
