[project]
name = "hapax-arrange"
version = "0.1.0"
description = "Convert a DAW-exported multi-track MIDI file into a Squarp Hapax-ready import bundle"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mario Castro" }]
dependencies = [
    "click>=8.1",
    "mido>=1.3",
]

[project.urls]
Homepage = "https://github.com/MarcAstr0/hapax-arrange"
Repository = "https://github.com/MarcAstr0/hapax-arrange"
Issues = "https://github.com/MarcAstr0/hapax-arrange/issues"

[project.scripts]
hapax-arrange = "hapax_arrange.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
